tempfile/derive_more/tests/compile_fail/display/unnamed_field_prefixed_with_dot.rs
#[derive(derive_more::Display)]
#[display("Stuff({})", .0)]
pub struct Foo(String);

fn main() {}
